--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 members = [
     "src/systems/a320",
-    "src/systems/systems",
+    "src/systems/autothrottle",
     "src/systems/fbw",
-    "src/autothrottle",
+    "src/systems/systems",
 ]
